# macos-fresh

./: .editorconfig  .flake8  .gitignore  LICENSE.md  Makefile  README.md  WIP.md  biome.json  config.json  config.yaml  logo.ai  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: cd.yml  ci.yml  semver.yml
ansible/: playbook.yml
ansible/group_vars/: all  licences
ansible/inventory/: hosts
ansible/roles/configure/tasks/: main.yml
ansible/roles/homebrew_caveats/tasks/: main.yml
ansible/roles/init/tasks/: main.yml
ansible/roles/not_implemented/tasks/: main.yml
ansible/roles/osx_apps/tasks/: main.yml
ansible/roles/osx_commands/tasks/: main.yml
ansible/roles/osx_defaults/tasks/: main.yml
ansible/roles/rvm/tasks/: main.yml
ansible/roles/space_cowboy/tasks/: main.yml
ansible/vars/: apps  apps.backup.example.yml  apps.yml  system  system.yml
conf/: secret.example  sublime  variables
fresh/: __init__.py  config.py  font.py  installer.py  macos.py  privileges.py  spinner.py
lib/: brew  casks  cli.js  home  links  npm  taps  utils  vars
misc/: displaysettings.applescript
misc/iterm2/: style.json
osx/: apps  system
scripts/: build.js
shell/: bash_aliases  bash_exports  bash_paths  bash_profile  bash_prompt
src/: cli.js  config.js  font.js  header.js  index.js  installer.js  macos.js  privileges.js  schema.js  spinner.js
src/util/: exec.js
test/: config.test.js  font.test.js  installer.test.js  macos.test.js  privileges.test.js
test/fixtures/: example-config.yaml
(+30 files in other folders)
