[tool.poetry]
name = "macos-fresh"
version = "0.0.0+local"
description = ""
authors = ["Ben White"]
readme = "README.md"
packages = [{include = "fresh"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
requests = "^2.28.1"
halo = "^0.0.31"
psutil = "^5.9.4"
termcolor = "^2.1.1"

[tool.poetry.scripts]
fresh = 'fresh:init'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"