[tool.poetry]
name = "macos-fresh"
version = "0.0.0+local"
description = ""
authors = ["Ben White"]
readme = "README.md"
packages = [{include = "fresh"}]

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0"
requests = "^2.31.0"
halo = "^0.0.31"
psutil = "^5.9.8"
termcolor = "^2.4.0"

[tool.poetry.scripts]
fresh = 'fresh:init'

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"